[gd_scene load_steps=15 format=2]

[ext_resource path="res://white_square.png" type="Texture" id=1]
[ext_resource path="res://Assets/Fonts/SourceHanSansCN-Medium.otf" type="DynamicFontData" id=2]
[ext_resource path="res://MainUI_Win.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 24
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 56
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 50
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 36
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 36
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]
size = 36
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=7]
size = 36
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=8]
size = 36
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=9]
size = 33
use_filter = true
extra_spacing_top = 6
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=10]
size = 40
use_filter = true
extra_spacing_top = 30
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=11]
size = 15
use_filter = true
font_data = ExtResource( 2 )

[node name="MainUI_Win" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Version" type="Label" parent="."]
margin_left = 248.0
margin_top = 600.0
margin_right = 408.0
margin_bottom = 672.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.686275, 0.686275, 0.686275, 1 )
text = "alpha0.2
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 721.0
margin_bottom = 1282.0
rect_scale = Vector2( 0.333, 0.333 )
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="ColorRect" parent="VBoxContainer"]
show_behind_parent = true
margin_right = 1081.0
margin_bottom = 115.0
rect_min_size = Vector2( 1081, 115 )
size_flags_horizontal = 7
color = Color( 0.258824, 0.333333, 0.435294, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer/Title"]
margin_left = 48.0
margin_top = 24.0
margin_right = 733.0
margin_bottom = 96.0
custom_fonts/font = SubResource( 2 )
text = "绩效考核分数计算与排名器 "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 125.0
margin_right = 1081.0
margin_bottom = 825.0
custom_constants/separation = 50

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_top = 343.0
margin_bottom = 357.0

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 50.0
margin_right = 350.0
margin_bottom = 700.0
custom_constants/separation = 50
__meta__ = {
"_editor_description_": ""
}

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer2"]
margin_right = 300.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 100 )
custom_fonts/font = SubResource( 3 )
text = "姓名："
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer2"]
margin_top = 150.0
margin_right = 300.0
margin_bottom = 250.0
rect_min_size = Vector2( 0, 100 )
custom_fonts/font = SubResource( 3 )
text = "部长评分："
valign = 1
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Label3" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer2"]
margin_top = 300.0
margin_right = 300.0
margin_bottom = 400.0
rect_min_size = Vector2( 0, 100 )
custom_fonts/font = SubResource( 3 )
text = "跟进评分："
valign = 1
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Label4" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer2"]
margin_top = 450.0
margin_right = 300.0
margin_bottom = 550.0
rect_min_size = Vector2( 0, 100 )
custom_fonts/font = SubResource( 3 )
text = "自评分数："
valign = 1
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Label5" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer2"]
margin_top = 600.0
margin_right = 300.0
margin_bottom = 700.0
rect_min_size = Vector2( 0, 100 )
custom_fonts/font = SubResource( 3 )
text = "额外增减分："
valign = 1
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 400.0
margin_right = 650.0
margin_bottom = 700.0
custom_constants/separation = 50

[node name="Name" type="LineEdit" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_right = 250.0
margin_bottom = 100.0
rect_min_size = Vector2( 250, 100 )
custom_fonts/font = SubResource( 4 )

[node name="Score1" type="LineEdit" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 150.0
margin_right = 250.0
margin_bottom = 250.0
rect_min_size = Vector2( 250, 100 )
custom_fonts/font = SubResource( 5 )
__meta__ = {
"_editor_description_": ""
}

[node name="Score2" type="LineEdit" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 300.0
margin_right = 250.0
margin_bottom = 400.0
rect_min_size = Vector2( 250, 100 )
custom_fonts/font = SubResource( 6 )
__meta__ = {
"_editor_description_": ""
}

[node name="Score3" type="LineEdit" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 450.0
margin_right = 250.0
margin_bottom = 550.0
rect_min_size = Vector2( 250, 100 )
custom_fonts/font = SubResource( 7 )
__meta__ = {
"_editor_description_": ""
}

[node name="Score4" type="LineEdit" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 600.0
margin_right = 250.0
margin_bottom = 700.0
rect_min_size = Vector2( 250, 100 )
custom_fonts/font = SubResource( 8 )
__meta__ = {
"_editor_description_": ""
}

[node name="DebugData" type="RichTextLabel" parent="VBoxContainer/HBoxContainer"]
margin_left = 700.0
margin_right = 1081.0
margin_bottom = 600.0
rect_min_size = Vector2( 0, 600 )
size_flags_horizontal = 3
size_flags_vertical = 0
custom_fonts/normal_font = SubResource( 9 )
custom_colors/default_color = Color( 0.784314, 0.784314, 0.784314, 1 )
text = "Debug信息
"
scroll_following = true

[node name="ColorRect" type="ColorRect" parent="VBoxContainer"]
margin_top = 835.0
margin_right = 1081.0
margin_bottom = 860.0
rect_min_size = Vector2( 0, 25 )
color = Color( 0.227451, 0.227451, 0.227451, 1 )

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
margin_top = 870.0
margin_right = 1081.0
margin_bottom = 1922.0
size_flags_vertical = 3
custom_constants/margin_left = 25

[node name="VBoxContainer3" type="VBoxContainer" parent="VBoxContainer/MarginContainer"]
margin_left = 25.0
margin_right = 1081.0
margin_bottom = 1052.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer/MarginContainer/VBoxContainer3"]
margin_right = 1056.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 100 )
custom_fonts/font = SubResource( 3 )
text = "统计与排名："
valign = 1
__meta__ = {
"_editor_description_": ""
}

[node name="Data" type="RichTextLabel" parent="VBoxContainer/MarginContainer/VBoxContainer3"]
margin_top = 104.0
margin_right = 1056.0
margin_bottom = 1052.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/normal_font = SubResource( 10 )

[node name="ClearButton" type="TextureButton" parent="."]
self_modulate = Color( 0.258824, 0.333333, 0.435294, 1 )
margin_left = 264.0
margin_top = 8.0
margin_right = 344.0
margin_bottom = 32.0
texture_normal = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
margin_left = 288.0
margin_right = 328.0
margin_bottom = 32.0
custom_fonts/font = SubResource( 11 )
text = "清空"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Label3" type="Label" parent="."]
margin_left = 256.0
margin_top = 240.0
margin_right = 312.0
margin_bottom = 269.0
custom_fonts/font = SubResource( 11 )
text = "确认"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="ConfirmButton" type="TextureButton" parent="."]
self_modulate = Color( 0.172549, 0.164706, 0.196078, 1 )
show_behind_parent = true
margin_left = 232.0
margin_top = 240.0
margin_right = 336.0
margin_bottom = 272.0
texture_normal = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="ClearButton" to="." method="_on_ClearButton_pressed"]
[connection signal="pressed" from="ConfirmButton" to="." method="_on_ConfirmButton_pressed"]
